--- a/Learning.html
+++ b/Learning.html
@@ -21,7 +21,7 @@
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-
+    firebase.analytics();
     //firebase.auth().currentUser.uid
 
     function ThePowerOfKnowledge(){
