--- a/Homepage.html
+++ b/Homepage.html
@@ -23,11 +23,18 @@
   </p>
 </body>
 <script>
+var firebaseConfig = {
+  apiKey: "AIzaSyB_Jel93p7tJz9Ay4LUKWf0lPhbu3cwwRI",
+  authDomain: "e-vent-4c051.firebaseapp.com",
+  databaseURL: "https://e-vent-4c051.firebaseio.com",
+  projectId: "e-vent-4c051",
+  storageBucket: "e-vent-4c051.appspot.com",
+  messagingSenderId: "336176879404",
+  appId: "1:336176879404:web:4b3080f52f9adb4d0f7e89"
 };
-<<<<<<< HEAD
-}
-=======
+// Initialize Firebase
 firebase.initializeApp(firebaseConfig);
+firebase.analytics();
 
     console.log(firebase.auth().currentUser);
     firebase.auth().onAuthStateChanged(function (user) {
