--- a/Log In Page.html
+++ b/Log In Page.html
@@ -6,22 +6,6 @@
   </head>
   <body>
     <link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
-    <h2>Create an Account</h2>
-    <p>
-      Email Address
-      <input id="email-address" type="email" />
-    </p>
-    <p>
-      First Name
-      <input id="first-name" type="userName" />
-    </p>
-    <p>
-      Password
-      <input id="password" type="password" />
-    </p>
-    <p>
-      <button onclick="signUp();">Sign Up</button>
-    </p>
     <h2>Sign into Already Existing Account</h2>
     <p>
       Email Address
@@ -47,15 +31,8 @@
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-
-    function signUp() {
-      let email = document.getElementById('email-address').value;
-      let password = document.getElementById('password').value;
-
-      console.log(email, password)
-      firebase.auth().createUserWithEmailAndPassword(email, password).then(function (user) {
-        uploadName(user.user.uid);
-      });
+    firebase.analytics();
+    
     }
     function uploadName(uid){
       let element = document.getElementById('first-name');
@@ -69,9 +46,6 @@
       let password = document.getElementById('password-sign-in').value;
 
       firebase.auth().signInUserWithEmailAndPassword(email, password);
-    }
-    function redirectHome() {
-
     }
   </script>
 </html>
