--- a/Sign Up Page.html
+++ b/Sign Up Page.html
@@ -38,7 +38,19 @@
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
+  // firebase.analytics();
+
+  firebase.auth().onAuthStateChanged(function (user) {
+          if (user) {
+            document.getElementById('go-to-button').className = '';
+          } else {
+            document.getElementById('go-to-button').className = 'hidden';
+          }
+      });
+
+  function goToHomepage() {
+    window.location.href = './Homepage.html';
+  }
 
   function signUp() {
     let email = document.getElementById('email-address').value;
@@ -48,6 +60,15 @@
     firebase.auth().createUserWithEmailAndPassword(email, password).then(function (user) {
       uploadName(user.user.uid);
     });
+  }
+
+  function uploadName(uid){
+      let element = document.getElementById('first-name');
+      firebase.firestore().collection('users').doc(uid).set({
+        name: element.value
+      });
+    }
+
 
   </script>
 </html>
