--- a/Homepage.html
+++ b/Homepage.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
   <div class="topnav">
    <a href="Messages"><p style="text-align:center">Messages</a>
   <a href="Log In Page.html">Login</a>
@@ -10,9 +13,6 @@
   </a>
 </div>
 <h1> <a href="Your Parties.html"> MyParties </a> </h1>
-  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
   <meta charset="utf-8">
   <h1 Cascading-Style-Sheet.css> Welcome to E-vent! </h1>
   <link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@ var firebaseConfig = {
 };
 // Initialize Firebase
 firebase.initializeApp(firebaseConfig);
-firebase.analytics();
+// firebase.analytics();
 
     console.log(firebase.auth().currentUser);
     firebase.auth().onAuthStateChanged(function (user) {
@@ -48,9 +48,6 @@ firebase.analytics();
 
     function signOut() {
       firebase.auth().signOut();
-    }  }
-
-
->>>>>>> eb646c9e41db4d487487c42be09f532ef3166f47
+    }
 </script>
 </html>
