--- a/Homepage.html
+++ b/Homepage.html
@@ -32,11 +32,13 @@ var firebaseConfig = {
   messagingSenderId: "336176879404",
   appId: "1:336176879404:web:4b3080f52f9adb4d0f7e89"
 };
-// Initialize Firebase
-firebase.initializeApp(firebaseConfig);
-// firebase.analytics();
-
-    console.log(firebase.auth().currentUser);
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    // firebase.auth().setPersistance(firebase.auth.Auth.Persistence.LOCAL);
+    // firebase.analytics();
+    firebase.auth().onAuthStateChanged(function (test) {
+      console.log(firebase.auth().currentUser.email);
+    });
     firebase.auth().onAuthStateChanged(function (user) {
       console.log('Homepage', user)
         if (user) {
@@ -45,6 +47,8 @@ firebase.initializeApp(firebaseConfig);
           document.getElementById('go-to-button').className = 'hidden';
         }
     });
+
+
 
     function signOut() {
       firebase.auth().signOut();
