--- a/Sign Up Page.html
+++ b/Sign Up Page.html
@@ -39,7 +39,6 @@
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
-  firebase.auth().setPersistance(firebase.auth.Auth.Persistence.LOCAL);
   // firebase.analytics();
 
   firebase.auth().onAuthStateChanged(function (test) {
@@ -75,6 +74,14 @@
         name: element.value
       });
     }
+  firebase.auth().onAuthStateChanged(function (user) {
+      console.log('Homepage', user)
+        if (user) {
+          document.getElementById('go-to-button').className = '';
+        } else {
+          document.getElementById('go-to-button').className = 'hidden';
+        }
+    });
 
 
   </script>
