--- a/Homepage.html
+++ b/Homepage.html
@@ -5,7 +5,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
   <div class="topnav">
-   <a href="Messages"><p style="text-align:center">Messages</a>
+   <a href="Messages.html"><p style="text-align:center">Messages</a>
   <a href="Log In Page.html">Login</a>
   <a href="About.html" style="text-align:center">About</a>
   <a>
