--- a/Homepage.html
+++ b/Homepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
 <head>
   <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
@@ -17,6 +18,7 @@
   <h1 Cascading-Style-Sheet.css> Welcome to E-vent! </h1>
   <link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
 </head>
+<link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
 <body>
 </body>
 <script>
