--- a/Your Parties.html
+++ b/Your Parties.html
@@ -16,34 +16,33 @@
     <select id="parties"><p style="text-align:center">
 
     </select>
-    <p>
+    <div class="boxed"> 
       <h4 p style="text-align:center"> Enter Theme of Your Party </h4>
-      <input id="Name-Of-Party" type="list" /><p style="text-align:center">
+      <input class="centered-input" id="Name-Of-Party" type="list" /><p style="text-align:center">
       <button onclick="submit();" p style="text-align:center">Save</button>
 
-    </p>
     <p>
       <h4 p style="text-align:center"> Enter Formality of Your Party </h4>
-      <input id="Name-Of-Party" type="list" /><p style="text-align:center">
+      <input class="centered-input" id="Name-Of-Party" type="list" /><p style="text-align:center">
       <button onclick="submit();" p style="text-align:center">Save</button>
 
     </p>
     <p>
       <h4 p style="text-align:center"> Enter the Venue/Site of Your Party </h4>
-      <input id="Name-Of-Party" type="list" /><p style="text-align:center">
+      <input class="centered-input" id="Name-Of-Party" type="list" /><p style="text-align:center">
       <button onclick="submit();" p style="text-align:center">Save</button>
 
     </p>
     <p>
       <h4 p style="text-align:center"> Enter the Date and Time of Your Party </h4>
-      <input id="Name-Of-Party" type="list" /><p style="text-align:center">
+      <input class="centered-input" id="Name-Of-Party" type="list" /><p style="text-align:center">
       <button onclick="submit();" p style="text-align:center">Save</button>
 
     </p>
     <p>
       <a href="InvitePeople.html"><p style="text-align:center">Invite People</a>
     </p>
-
+</div>
   </body>
   <link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
   <script>
