--- a/Homepage.html
+++ b/Homepage.html
@@ -20,6 +20,10 @@
 </head>
 <link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
 <body>
+  <pre> E-Vent is a web service designed to help with sending invitations
+  and planning parties. It was created by Spencer Collins, Sophia Anderson,
+  Aidan Hyman and Colin Russell for HackSoCal 2020.
+  </pre>
 </body>
 <script>
 var firebaseConfig = {
