--- a/Log In Page.html
+++ b/Log In Page.html
@@ -3,27 +3,27 @@
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
-    <link rel="stylesheet" href="./Style For Sign In and Out.css">
+    <link rel="stylesheet" href="Style For Sign In and Out.css">
   </head>
   <body>
-    <link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
+    <link href="Style For Sign In and Out.css" rel="stylesheet" type="text/css">
     <div>
       <h2>Sign into Already Existing Account</h2>
       <p>
-        Email Address
+        Email Address:
         <input id="email-address-sign-in" type="email" />
       </p>
       <p>
-        Password
+        Password: &nbsp
         <input id="password-sign-in" type="password" />
       </p>
       <p>
-        <button onclick="signIn();">Sign In</button>
+        <button onclick="signIn();"><center>Sign In</center></button>
       </p>
       <p>
-        <button onclick="goToHomepage();" class="hidden" id="go-to-button">Go To Homepage</button>
+        <button onclick="goToHomepage();" class="hidden" id="go-to-button"><center>Go To Homepage</center></button>
       </p>
-      <a href="Sign Up Page.html">Sign Up</a>
+      <a href="Sign Up Page.html"><center>Create New Account</center></a>
     </div>
 
   </body>
