--- a/Log In Page.html
+++ b/Log In Page.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="Style For Sign In and Out.css">
   </head>
   <body>
+    <header>
+      <img src="Evnt2.png" height=65px alt="logo" >
+    </header>
     <link href="Style For Sign In and Out.css" rel="stylesheet" type="text/css">
     <div>
       <h2>Sign into Already Existing Account</h2>
