--- a/Homepage.html
+++ b/Homepage.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
-<link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
 <head>
   <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
-  <div class="topnav">
-   <a href="Messages.html"><p style="text-align:center">Messages</a>
-  <a href="Log In Page.html">Login</a>
-  <a href="About.html" style="text-align:center">About</a>
-  <a>
-    <button onclick="signOut();" class="hidden" id="go-to-button" style="text-align:center">Sign Out</button>
-  </a>
-</div>
-<h1> <a href="Your Parties.html"> MyParties </a> </h1>
-  <meta charset="utf-8">
-  <h1 Cascading-Style-Sheet.css> Welcome to E-vent! </h1>
-  <link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
 </head>
-<link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
+<link href="Style For Home.css" rel="stylesheet" type="text/css">
 <body>
-  <pre> E-Vent is a web service designed to help with sending invitations
+  <header>
+    <img src="Evnt2.png" height=60px align="left" alt="logo">
+    <h2> Welcome to E-Vent!</h2>
+    <p>
+    <h2> <a href="Your Parties.html"> MyParties </a>
+    <a href="Messages.html">Messages</a>
+   <a href="Log In Page.html">Login</a>
+   <a href="About.html" style="text-align:center">About</a>
+   <a>
+     <button onclick="signOut();" class="hidden" id="go-to-button" style="text-align:center">Sign Out</button>
+   </a>
+ </h2>
+</p>
+  </header>
+<div>
+  <h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp About E-Vent</h2>
+  <p>
+  E-Vent is a web service designed to help with sending invitations
   and planning parties. It was created by Spencer Collins, Sophia Anderson,
   Aidan Hyman and Colin Russell for HackSoCal 2020.
-  </pre>
+</p>
+</div>
 </body>
 <script>
 var firebaseConfig = {
