--- a/Sign Up Page.html
+++ b/Sign Up Page.html
@@ -8,7 +8,7 @@
   <body>
     <link href="Style For Sign In and Out.css" rel="stylesheet" type="text/css">
     <header>
-      <img src="Evnt2.png" height=65px alt="logo" >
+      <img src="Evntful1.png" height=65px alt="logo" >
     </header>
     <div>
       <h2>Create an Account</h2>
