--- a/Log In Page.html
+++ b/Log In Page.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img src="Evntful1.png" height=100px alt="logo" >
+      <a href="Homepage.html"><img src="Evntful1.png" height=100px alt="logo" ></a>
     </header>
     <link href="Style For Sign In and Out.css" rel="stylesheet" type="text/css">
     <div>
