--- a/Your Parties.html
+++ b/Your Parties.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Style For Your Parties.css">
   </head>
   <body>
-    <link href="Style For Your Parties.css" rel="stylesheet" type="text/css">
+    <a href="Homepage.html"><link href="Style For Your Parties.css" rel="stylesheet" type="text/css"></a>
     <header>
       <img src="Evntful1.png" height=100px align="left" alt="logo" >
       <h2>Your Parties</h2>
