--- a/InvitePeople.html
+++ b/InvitePeople.html
@@ -4,26 +4,33 @@
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
   </head>
+  <link href="Style For Invite People.css" rel="stylesheet" type="text/css">
   <body>
-    <p>
-      <font size="40">Choose your party goers to invite:</font>
-    </p>
-    <select id = "parties">
-    </select>
-    <link href="Cascading-Style-Sheet.css" rel="stylesheet" type="text/css">
-    <p>
+    <header>
+      <a href="Homepage.html"><img src="Evntful1.png" height=100px align="left" alt="logo"></a>
+      <h2> Invite Your Friends!</h2>
+    </header>
+    <div>
+      <p>
+        <h3>Choose your party goers to invite:</h3>
+      </p>
+      <select id = "parties">
+      </select>
+      <link href="Style For Invite People.css" rel="stylesheet" type="text/css">
+      <p>
 
-      <input id="invitee" type="invitedUser" />
-    </p>
-    <p>
-      <button onclick = "submit(); document.getElementById('invitee').value = ''">Submit</button>
-    </p>
-    <p id ="listInvitees">
-      Invited Users<br>
-    </p>
-    <p>
-      <button onclick = "sendInvites()">Send Invites</button>
-    </p>
+        <input id="invitee" type="invitedUser" />
+      </p>
+      <p>
+        <button onclick = "submit(); document.getElementById('invitee').value = ''">Submit</button>
+      </p>
+      <p id ="listInvitees">
+        Invited Users<br>
+      </p>
+      <p>
+        <button onclick = "sendInvites()">Send Invites</button>
+      </p>
+    </div>
   </body>
   <script>
     var firebaseConfig = {
