--- a/Homepage.html
+++ b/Homepage.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <img src="Evntful1.png" height=100px align="left" alt="logo">
-    <h2> Welcome to E-Vent!</h2>
+  <h2 text-shadow: -1px -1px 0 #FFFFFF, 1px -1px 0 #FFFFFF, -1px 1px 0 #FFFFFF, 1px 1px 0 #FFFFFF;> Welcome to E-Vent!</h2>
     <p>
     <h2> <a href="Your Parties.html"> MyParties </a>
    <a href="Log In Page.html">Login</a>
