--- a/E-vent.html
+++ b/E-vent.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <link href="E-vent.css" rel="stylesheet" type="text/css">
-  <h1> You've been invited to Spencer's Wedding! </h1>
+  <h1 color: gold;> You've been invited to Spencer's Wedding! </h1>
   </head>
   <body>
     <link href="E-vent.css" rel="stylesheet" type="text/css">
-    <span class="dot"></span>
   </body>
 <script>
 
